# rust-renderer

./: Cargo.toml  README.md
assets/: keybindings.json
assets/scene_defs/: complex.json  simple.json  simple_with_skybox.json  spheres.json
benches/: framebuffer.rs  geometry.rs  gpu_bench.rs  multi_thread_bench.rs  renderer.rs  renderer_bench.rs  single_thread_bench.rs
macros/enum-iter-macro/: Cargo.toml
macros/enum-iter-macro-tests/: Cargo.toml
macros/enum-iter-macro-tests/tests/ui/: fail_struct.rs  fail_struct.stderr  pass_basic.rs
macros/enum-iter-macro/src/: lib.rs
src/: app.rs  blit.wgsl  cache.rs  display.rs  fps.rs  framebuffer.rs  lib.rs  main.rs  material.rs  overlay.rs  renderer.rs  text.rs  texture.rs  tile.rs
src/file/: file_iter.rs  key_bindings_file.rs  mod.rs  scene_file.rs
src/geometry/: animation.rs  cube.rs  line.rs  mesh.rs  mod.rs  obj_loader.rs  object.rs  physics.rs  plane.rs  sphere.rs  transform.rs  triangle.rs  update_thread.rs
src/macros/: cache.rs
src/maths/: mat4.rs  mod.rs  vec2.rs  vec3.rs  vec4.rs
src/maths/proptests/: mat4.rs  mod.rs  vec3.rs
src/overlay/: fps.rs  mod.rs  stats_overlay.rs  text.rs
src/proptests/: mod.rs  rendering.rs
src/renderer/: clip.rs  gpu_raster_renderer.rs  init_renderer.rs  mod.rs  multi_thread_raster_renderer.rs  prepare.rs  raster.wgsl  raster_renderer.rs  rasterize.rs  shade.rs  shadow_map.rs  single_thread_raster_renderer.rs  tile.rs
src/renderer/cpu/: display.rs  mod.rs  multi_thread_raster_renderer.rs  single_thread_raster_renderer.rs
src/renderer/vulkan/: device.rs  display.rs  mod.rs  pipeline.rs  shaders.rs
src/renderer/wgsl/: display.rs  mod.rs  raster.wgsl  shadow.wgsl
src/scene/: mod.rs  scene_objects.rs
src/scenes/: camera.rs  material.rs  mod.rs  pointlight.rs  scene.rs  scene_settings.rs  texture.rs
src/scenes/lights/: mod.rs  pointlight.rs  spot_light.rs
src/shapes/: cube.rs  line.rs  mod.rs  triangle.rs
