[package]
name = "rust-renderer"
version = "0.1.0"
edition = "2024"

[dependencies]
image = { version = "0.25.10", features = ["exr"] }
pixels = "0.15.0"
rayon = "1.11.0"
schemars = "1.2.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
winit = "0.31.0-beta.2"

[dev-dependencies]
criterion = "0.5"

[target.'cfg(not(target_os = "windows"))'.dev-dependencies]
pprof = { version = "0.13", features = ["flamegraph", "criterion"] }

[[bench]]
name = "renderer_bench"
harness = false
