[package]
name = "rust-renderer"
version = "0.1.0"
edition = "2024"

[dependencies]
bytemuck = { version = "1.22", features = ["derive"] }
clap = { version = "4.6.0", features = ["derive"] }
image = { version = "0.25.10", features = ["exr"] }
indexmap = "2.13.0"
pollster = "0.4.0"
rayon = "1.11.0"
schemars = "1.2.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
strum_macros = "0.28.0"
wgpu = "29.0.1"
winit = "0.31.0-beta.2"

[dev-dependencies]
criterion = "0.5"

[target.'cfg(not(target_os = "windows"))'.dev-dependencies]
pprof = { version = "0.13", features = ["flamegraph", "criterion"] }

[[bench]]
name = "single_thread_bench"
harness = false

[[bench]]
name = "multi_thread_bench"
harness = false
