[workspace]
members = [".", "macros/*"]
resolver = "2"

[package]
name = "rust-renderer"
version = "0.1.0"
edition = "2024"

[profile.dev]
opt-level = 1

[dependencies]
enum-iter-macro = { path = "macros/enum-iter-macro" }

bytemuck = { version = "1.22", features = ["derive"] }
clap = { version = "4.6.0", features = ["derive"] }
image = { version = "0.25.10", features = ["exr"] }
indexmap = "2.13.0"
pollster = "0.4.0"
proptest = "1.11.0"
rayon = "1.11.0"
schemars = "1.2.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
strum_macros = "0.28.0"
wgpu = "29.0.1"
winit = "0.31.0-beta.2"
vulkano = "0.35.2"
vulkano-shaders = "0.35"
thiserror = "2.0.18"

[dev-dependencies]
criterion = "0.8.2"

[target.'cfg(not(target_os = "windows"))'.dev-dependencies]
pprof = { version = "0.15", features = ["flamegraph", "criterion"] }

[[bench]]
name = "renderer"
harness = false

[[bench]]
name = "geometry"
harness = false

[[bench]]
name = "framebuffer"
harness = false
